[gd_scene load_steps=26 format=3 uid="uid://bje2apkp23o13"]

[ext_resource type="PackedScene" uid="uid://bxilnp4n533td" path="res://play/bg.tscn" id="1_ha8op"]
[ext_resource type="Script" path="res://play/play.gd" id="1_ybesp"]
[ext_resource type="Texture2D" uid="uid://cgg0t83gknt8u" path="res://asset/hakari/hakari.png" id="2_swjir"]
[ext_resource type="Texture2D" uid="uid://bq2xyaq6i71lk" path="res://asset/hakari/hakari2.png" id="3_4esep"]
[ext_resource type="Texture2D" uid="uid://bf60k2s3xa2dv" path="res://asset/hakari/hakari3.png" id="4_mpvwh"]
[ext_resource type="Texture2D" uid="uid://oj7orj2s3nkx" path="res://asset/hakari/hakarishy.png" id="5_27f6r"]
[ext_resource type="Texture2D" uid="uid://uy65oxpu4til" path="res://asset/karane/karane.png" id="5_xy4qh"]
[ext_resource type="Texture2D" uid="uid://gwi7f4w3ngkn" path="res://asset/karane/karane_2.png" id="6_m0d2i"]
[ext_resource type="Texture2D" uid="uid://cbh08p76ui7vy" path="res://asset/karane/karane_3.png" id="7_rn7go"]
[ext_resource type="Texture2D" uid="uid://dvs7d1kmfidyy" path="res://asset/hakari/hakari_shy1.png" id="7_wahbf"]
[ext_resource type="PackedScene" uid="uid://k7pb4bp7x7sy" path="res://play/interface.tscn" id="8_bs3dl"]
[ext_resource type="Texture2D" uid="uid://c8kd8yg4p1sbk" path="res://asset/hakari/hakari_shy3.png" id="8_gmna1"]
[ext_resource type="Texture2D" uid="uid://bcxmynmbw82sh" path="res://asset/karane/karane_3shy.png" id="10_4jkqq"]
[ext_resource type="Texture2D" uid="uid://d21w6k1hkmg4w" path="res://asset/karane/karane_shy1.png" id="13_xjgq3"]
[ext_resource type="Texture2D" uid="uid://dnrl08peb4rr6" path="res://asset/karane/karane_shy3.png" id="14_2djxe"]

[sub_resource type="Animation" id="Animation_rl5g3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hakari:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_swjir")]
}

[sub_resource type="Animation" id="Animation_jruvb"]
resource_name = "hakari_blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hakari:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_swjir"), ExtResource("3_4esep"), ExtResource("4_mpvwh")]
}

[sub_resource type="Animation" id="Animation_hxbrs"]
resource_name = "shy"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hakari:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_27f6r"), ExtResource("5_27f6r")]
}

[sub_resource type="Animation" id="Animation_pwmhq"]
resource_name = "shy_shy"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hakari:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_wahbf"), ExtResource("8_gmna1")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cp6p"]
_data = {
"RESET": SubResource("Animation_rl5g3"),
"hakari_blink": SubResource("Animation_jruvb"),
"shy": SubResource("Animation_hxbrs"),
"shy_shy": SubResource("Animation_pwmhq")
}

[sub_resource type="Animation" id="Animation_4blui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_xy4qh")]
}

[sub_resource type="Animation" id="Animation_s23s5"]
resource_name = "karane_blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("5_xy4qh"), ExtResource("6_m0d2i"), ExtResource("7_rn7go")]
}

[sub_resource type="Animation" id="Animation_hluf6"]
resource_name = "shy"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("10_4jkqq"), ExtResource("10_4jkqq")]
}

[sub_resource type="Animation" id="Animation_b2wey"]
resource_name = "shy_shy"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_xjgq3"), ExtResource("14_2djxe")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xl177"]
_data = {
"RESET": SubResource("Animation_4blui"),
"karane_blink": SubResource("Animation_s23s5"),
"shy": SubResource("Animation_hluf6"),
"shy_shy": SubResource("Animation_b2wey")
}

[node name="Play" type="Node2D"]
position = Vector2(-45, -17)
script = ExtResource("1_ybesp")

[node name="Bg" parent="." instance=ExtResource("1_ha8op")]

[node name="Hakari" type="Sprite2D" parent="."]
position = Vector2(285, 288)
scale = Vector2(3, 3)
texture = ExtResource("2_swjir")

[node name="Hakari_anim" type="AnimationPlayer" parent="Hakari"]
root_node = NodePath("../..")
autoplay = "hakari_blink"
libraries = {
"": SubResource("AnimationLibrary_5cp6p")
}

[node name="Karane" type="Sprite2D" parent="."]
position = Vector2(765, 288)
scale = Vector2(3, 3)
texture = ExtResource("5_xy4qh")

[node name="Karane_anim" type="AnimationPlayer" parent="Karane"]
autoplay = "karane_blink"
libraries = {
"": SubResource("AnimationLibrary_xl177")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("8_bs3dl")]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="Hakari/Hakari_anim" to="." method="_on_hakari_anim_animation_finished"]
[connection signal="animation_finished" from="Karane/Karane_anim" to="." method="_on_karane_anim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
